feat: end of styling main page 1920px

--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -1,6 +1,8 @@
 $primary-color: #8654cc;
 $secondary-color: #edcffc;
-$button-color:#C2F09C;
-$button-back-color:#9B6DD6;
+$button-color: #c2f09c;
+$button-text-color:#6933B0;
+$button-back-color: #9b6dd6;
+$white: #fff;
 $font-size: 16px;
 $padding: 10px;
