--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,4 +2,20 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #8654cc;
+}
+
+h1,
+p {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
