--- a/src/assets/components/_StartPage.scss
+++ b/src/assets/components/_StartPage.scss
@@ -1,42 +1,27 @@
 @import '../utils/variables';
-
 .main {
   display: flex;
   flex-flow: column;
   align-items: center;
-  min-height: calc(100vh - 270px);
-  margin-top: 180px;
-
-  @media (max-width: 1600px) {
-    margin-top: 100px;
-  }
-
-  &-title__title {
-    margin-bottom: 24px;
-    height: 68px;
-  }
-
   &-title {
-    height: 200px;
-    margin-bottom: 45px;
-  }
-  &-title__subtitle {
-    font-size: 36px;
-    text-align: center;
-    line-height: 43.2px;
-    font-weight: 400;
-    text-transform: uppercase;
+    &__title {
+      margin-bottom: 24px;
+    }
+
+    &__subtitle {
+      text-align: center;
+      font-weight: 400;
+      text-transform: uppercase;
+    }
   }
 
   &-images {
     margin-bottom: 20px;
+    display: flex;
   }
 
   &-button-start {
-    width: 25rem;
-    height: 5.5rem;
     border-radius: 92.5px;
-    font-size: 36px;
     border: none;
     outline: none;
     color: $button-text-color;
@@ -49,5 +34,174 @@
   }
   &-button-start:active {
     background-color: #f4f4f4;
+  }
+}
+
+@media (max-width: 3840px) {
+  .main {
+    margin-top: 360px;
+    margin-bottom: 133px;
+    &-title {
+      margin-bottom: 184px;
+      &__title {
+        height: 177px;
+        width: 1400px;
+      }
+      &-title__subtitle {
+        font-size: 68px;
+        line-height: 81.6px;
+      }
+    }
+
+    &-images {
+      &__image {
+        height: 460px;
+        width: 475px;
+        column-gap: 96px;
+      }
+    }
+
+    &-button-start {
+      width: 740px;
+      height: 169px;
+      font-size: 64px;
+      line-height: 73.2px;
+    }
+  }
+}
+
+@media (max-width: 2560px) {
+  .main {
+    margin-top: 250px;
+    margin-bottom: 133px;
+    &-title {
+      margin-bottom: 120px;
+      &__title {
+        height: 120px;
+        width: 940px;
+      }
+      &-title__subtitle {
+        font-size: 42px;
+        line-height: 50.4px;
+      }
+    }
+
+    &-images {
+      &__image {
+        height: 320px;
+        width: 310px;
+        column-gap: 64px;
+      }
+    }
+
+    &-button-start {
+      width: 490px;
+      height: 112px;
+      font-size: 42px;
+      line-height: 48px;
+    }
+  }
+}
+
+@media (max-width: 1920px) {
+  .main {
+    margin-top: 180px;
+    margin-bottom: 0px;
+    &-title {
+      margin-bottom: 45px;
+      &__title {
+        height: 89px;
+        width: 700px;
+      }
+      &__subtitle {
+        font-size: 36px;
+        line-height: 43.2px;
+      }
+    }
+
+    &-images {
+      column-gap: 48px;
+
+      &__image {
+        height: 230px;
+        width: 238px;
+      }
+    }
+
+    &-button-start {
+      width: 400px;
+      height: 89px;
+      font-size: 36px;
+      line-height: 41.1px;
+    }
+  }
+}
+
+@media (max-width: 1600px) {
+  .main {
+    margin-top: 100px;
+    margin-bottom: 40px;
+    &-title {
+      margin-bottom: 45px;
+      &__title {
+        height: 89px;
+        width: 700px;
+      }
+      &__subtitle {
+        font-size: 36px;
+        line-height: 43.2px;
+      }
+    }
+
+    &-images {
+      column-gap: 40px;
+
+      &__image {
+        height: 210px;
+        width: 217px;
+      }
+    }
+
+    &-button-start {
+      width: 347px;
+      height: 75px;
+      font-size: 32px;
+      line-height: 36.6px;
+    }
+  }
+}
+
+@media (max-width: 744px) {
+  .main {
+    margin-top: 150px;
+    margin-bottom: 50px;
+    &-title {
+      margin-bottom: 50px;
+      &__title {
+        height: 43px;
+        width: 340px;
+        filter: brightness(200%);
+      }
+      &__subtitle {
+        font-size: 18px;
+        line-height: 21.6px;
+      }
+    }
+
+    &-images {
+      column-gap: 30px;
+
+      &__image {
+        height: 91px;
+        width: 93px;
+      }
+    }
+
+    &-button-start {
+      width: 260px;
+      height: 65px;
+      font-size: 20px;
+      line-height: 28px;
+    }
   }
 }
