--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -1,7 +1,8 @@
 $primary-color: #8654cc;
 $secondary-color: #edcffc;
+$secondary-color-opacity: rgba(237, 207, 252, 0.2);
 $button-color: #c2f09c;
-$button-text-color:#6933B0;
+$button-text-color: #6933b0;
 $button-back-color: #9b6dd6;
 $white: #fff;
 $font-size: 16px;
