--- a/src/assets/components/_FinalPage.scss
+++ b/src/assets/components/_FinalPage.scss
@@ -13,6 +13,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+
+    &-title {
+      text-transform: uppercase;
+    }
   }
 
   &__card {
@@ -44,6 +48,7 @@
     border: none;
     border-radius: 1000px;
     cursor: pointer;
+    font-family: 'MegaBold';
   }
   .retry {
     background-color: $secondary-color-opacity;
@@ -71,7 +76,7 @@
       gap: 42px;
       width: 1684px;
       margin-bottom: 48px;
-
+      height: 560px;
       &-title {
         font-size: 68px;
         line-height: 95.2px;
@@ -89,9 +94,6 @@
       padding: 90px 30px 40px 30px;
       border-radius: 20px;
       margin-bottom: 25px;
-
-      .card__img {
-      }
 
       .card__title {
         font-size: 32px;
@@ -133,8 +135,9 @@
 
     &__text {
       gap: 22px;
-      width: 960px;
+      width: 1050px;
       margin-bottom: 48px;
+      height: 290px;
 
       &-title {
         font-size: 48px;
@@ -197,9 +200,9 @@
 
     &__text {
       gap: 22px;
-      width: 760px;
-      margin-bottom: 48px;
-
+      width: 800px;
+      margin-bottom: 44px;
+      height: 260px;
       &-title {
         font-size: 36px;
         line-height: 50.4px;
@@ -263,7 +266,7 @@
       gap: 15px;
       width: 670px;
       margin-bottom: 35px;
-
+      height: 340px;
       &-title {
         font-size: 36px;
         line-height: 50.4px;
@@ -329,7 +332,7 @@
     &__text {
       gap: 20px;
       width: 85vw;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
 
       &-title {
         font-size: 16px;
