feat: end of modal window

--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -5,5 +5,6 @@ $button-color: #c2f09c;
 $button-text-color: #6933b0;
 $button-back-color: #9b6dd6;
 $white: #fff;
-$font-size: 16px;
-$padding: 10px;
+$font-modal-title: #3a3a3a;
+$font-modal-text: #666666;
+$promocode: #7a3ba4;
